gitops/apps/waha/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: waha
  labels:
    name: waha
