gitops/apps/waha/waha-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: waha
  namespace: waha
spec:
  selector:
    app: waha
  ports:
    - port: 3000
      targetPort: 3000
